--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
 				<div>
 					<i class="ri-send-plane-line hidden"></i>
 					<span class="hidden">Enter starting point:</span>
-					<input class="input-style hidden" type="text" id="starting-point"
-						placeholder="coordinate or place name" required><br>
+					<input class="input-style hidden" type="text" id="starting-point" placeholder="Enter the place name"
+						onkeyup="showResultsStart()" autocomplete="off" required><br>
+					<div id="results-container-start" class="suggestion-box-start"></div>
 					<i class="ri-send-plane-line hidden"></i>
 					<span class="hidden">Enter destination:</span>
-					<input class="input-style hidden" type="text" id="destination"
-						placeholder="coordinate or place name" required><br>
+					<input class="input-style hidden" type="text" id="destination" placeholder="Enter the place name"
+						onkeyup="showResultsEnd()" autocomplete="off" required><br>
+					<div id="results-container-end" class="suggestion-box-end"></div>
 				</div>
 				<button class="button-style hidden" type="submit" onclick="submit()">Searching</button>
 			</li>
@@ -64,10 +66,8 @@
 			</li>
 			<li class="sub-menu-location" id="location-expanded">
 				<!-- Add Current Location Submenu Content Here -->
-				<div>
-					<p class="hidden">adbc</p>
+				<div id="location-info">
 				</div>
-
 			</li>
 		</ul>
 	</div>
@@ -154,17 +154,9 @@
 			if (isHistoryExpanded) toggleOptionHistory();
 			if (isTrafficExpanded) toggleOptionTraffic();
 			if (isLocationExpanded) toggleOptionLocation();
-			//if (ismapExpanded) togglemap();
 
 			isExpanded = !isExpanded;
 		}
-
-		// function togglemap(){
-		// 	if (isExpanded) {
-		// 		mapContainer.classList.remove('map-style-begame');
-		// 		mapContainer.classList.add('map-style-collapsed');
-		// 	}
-		// }
 
 		function toggleOptionTraffic() {
 			if (isExpanded) {
@@ -210,10 +202,18 @@
 					element.classList.toggle('hidden');
 				}
 
+				const locationInfo = document.getElementById('location-info');
 				if (!isLocationExpanded) {
 					getCurrentLocation_map();
+					const option_1 = document.createElement('li');
+					const option_2 = document.createElement('li');
+					option_1.textContent = window.current_user_longitude;
+					option_2.textContent = window.current_user_latitude;
+					locationInfo.appendChild(option_1);
+					locationInfo.appendChild(option_2);
 				}
 				else {
+					locationInfo.innerHTML = '';
 					clearCurrentLocation_map();
 				}
 
@@ -221,28 +221,202 @@
 			}
 		}
 
-		// submit时要调用currentline
-		let currentPolyline = [];
-		let currentstartmarker = null;
-		let currentendmarker = null;
-
 		let start_latitudeArray = [];
 		let start_longitudeArray = [];
 		let end_latitudeArray = [];
 		let end_longitudeArray = [];
+		let search_Building = [];
+
+		const startPoint = document.getElementById('starting-point');
+		const endPoint = document.getElementById('destination');
+		const resultsContainerStart = document.getElementById('results-container-start');
+		const resultsContainerEnd = document.getElementById('results-container-end');
+
+		resultsContainerStart.addEventListener('click', (event) => {
+			// 检查点击的是否为选项文本（li元素） 
+			console.log('event on click');
+			if (event.target.classList.contains('suggestion-text')) {
+				// 获取选中的文本
+				const selectedText = event.target.textContent;
+
+				// 将选中的文本替换输入框的内容
+				startPoint.value = selectedText;
+			}
+		});
+
+		startPoint.addEventListener('blur', () => {
+			setTimeout(() => {
+				resultsContainerStart.style.display = 'none';
+			}, 100);
+		});
+
+		startPoint.addEventListener('focus', () => {
+			resultsContainerStart.style.display = 'list-item';
+			const searchText = startPoint.value;
+			if (searchText.trim() === '') {
+				resultsContainerStart.innerHTML = '';
+				resultsContainerStart.style.height = 0;
+			}
+		});
+
+		resultsContainerEnd.addEventListener('click', (event) => {
+			// 检查点击的是否为选项文本（li元素） 
+			console.log('event on click');
+			if (event.target.classList.contains('suggestion-text')) {
+				// 获取选中的文本
+				const selectedText = event.target.textContent;
+
+				// 将选中的文本替换输入框的内容
+				endPoint.value = selectedText;
+			}
+		});
+
+		endPoint.addEventListener('blur', () => {
+			setTimeout(() => {
+				resultsContainerEnd.style.display = 'none';
+			}, 100);
+		});
+
+		endPoint.addEventListener('focus', () => {
+			resultsContainerEnd.style.display = 'list-item';
+			const searchText = endPoint.value;
+			if (searchText.trim() === '') {
+				resultsContainerEnd.innerHTML = '';
+				resultsContainerEnd.style.height = 0;
+			}
+		});
+
+
+		function showResultsStart() {
+			const searchText_1 = startPoint.value;
+			console.log(searchText_1);
+
+			if (searchText_1.trim() === '') {
+				resultsContainerStart.innerHTML = '';
+				resultsContainerStart.style.height = 0;
+				return;
+			}
+
+			// 调用API并获取结果
+			var apiUrl = "https://developers.onemap.sg/";
+
+			// 构建API请求URL
+			var requestUrl_1 = apiUrl + "commonapi/search?searchVal=" + searchText_1 + "&returnGeom=Y&getAddrDetails=Y&pageNum=1";
+
+			// 发送GET请求
+			$.get(requestUrl_1, function (data) {
+				console.log(data);
+				start_latitudeArray = [];
+				start_longitudeArray = [];
+				search_Building = [];
+
+				// 储存LATITUDE信息到数组
+				for (var i = 0; i < data.results.length; i++) {
+					start_latitudeArray.push(data.results[i].LATITUDE);
+				}
+				// 储存LONGITUDE信息到数组
+				for (var i = 0; i < data.results.length; i++) {
+					start_longitudeArray.push(data.results[i].LONGITUDE);
+				}
+
+				// 储存BUILDING的信息
+				for (var i = 0; i < Math.min(5, data.results.length); i++) {
+					search_Building.push(data.results[i].BUILDING + " " + data.results[i].BLK_NO);
+				}
+
+				resultsContainerStart.innerHTML = '';
+
+				search_Building.forEach(result => {
+					const option = document.createElement('li');
+					option.textContent = result;
+					option.classList.add('suggestion-text');
+					resultsContainerStart.appendChild(option);
+				});
+
+				resultsContainerStart.style.paddingTop = 0;
+				resultsContainerStart.style.height = `${30 * Math.min(5, data.results.length)}px`;
+				// 提取LATITUDE和LONGITUDE信息
+				// window.startingPointLatitude = data.results[0].LATITUDE;
+				// window.startingPointLongitude = data.results[0].LONGITUDE;
+
+				// var resultText = "Latitude: " + latitude + "<br>Longitude: " + longitude;
+				// $("#result").html(resultText);
+
+			});
+		}
+
+		function showResultsEnd() {
+			const searchText_2 = endPoint.value;
+			console.log(searchText_2);
+
+			if (searchText_2.trim() === '') {
+				resultsContainerEnd.innerHTML = '';
+				resultsContainerEnd.style.height = 0;
+				return;
+			}
+
+			// 调用API并获取结果
+			var apiUrl = "https://developers.onemap.sg/";
+
+			// 构建API请求URL
+			var requestUrl_2 = apiUrl + "commonapi/search?searchVal=" + searchText_2 + "&returnGeom=Y&getAddrDetails=Y&pageNum=1";
+
+			// 发送GET请求
+			$.get(requestUrl_2, function (data) {
+				console.log(data);
+				end_latitudeArray = [];
+				end_longitudeArray = [];
+				search_Building = [];
+
+				// 储存LATITUDE信息到数组
+				for (var i = 0; i < data.results.length; i++) {
+					end_latitudeArray.push(data.results[i].LATITUDE);
+				}
+				// 储存LONGITUDE信息到数组
+				for (var i = 0; i < data.results.length; i++) {
+					end_longitudeArray.push(data.results[i].LONGITUDE);
+				}
+				// 储存BUILDING的信息
+				for (var i = 0; i < Math.min(5, data.results.length); i++) {
+					search_Building.push(data.results[i].BUILDING + " " + data.results[i].BLK_NO);
+				}
+
+				resultsContainerEnd.innerHTML = '';
+
+				search_Building.forEach(result => {
+					const option = document.createElement('li');
+					option.textContent = result;
+					option.classList.add('suggestion-text');
+					resultsContainerEnd.appendChild(option);
+				});
+
+				resultsContainerEnd.style.paddingTop = 0;
+				resultsContainerEnd.style.height = `${30 * Math.min(5, data.results.length)}px`;
+
+
+				// 提取LATITUDE和LONGITUDE信息
+				// window.startingPointLatitude = data.results[0].LATITUDE;
+				// window.startingPointLongitude = data.results[0].LONGITUDE;
+
+				// var resultText = "Latitude: " + latitude + "<br>Longitude: " + longitude;
+				// $("#result").html(resultText);
+
+			});
+		}
+
+		let currentPolyline = [];
+		let currentstartmarker = null;
+		let currentendmarker = null;
 
 		let camera_latitudeArray = [];
 		let camera_longitudeArray = [];
 		let camera_car_number = [];
 
-		let maxarea = 0.000065;
+		let maxarea = 0.00007;
 
 		function submit() {
-			const startingPointInput = document.getElementById('starting-point');
-			const destinationInput = document.getElementById('destination');
-
-			const startingPoint = startingPointInput.value;
-			const destination = destinationInput.value;
+			const startingPoint = startPoint.value;
+			const destination = endPoint.value;
 			console.log(startingPoint);
 			console.log(destination);
 
@@ -274,9 +448,16 @@
 				window.startingPointLatitude = data.results[0].LATITUDE;
 				window.startingPointLongitude = data.results[0].LONGITUDE;
 
+				// 用webstore储存
+				let start_userArray_lat = JSON.pare(localStorage.getItem('start_users_lat')) || [];
+				let start_userArray_log = JSON.parse(localStorage.getItem('start_users_log')) || [];
+				start_userArray_lat.push(window.startingPointLatitude);
+				start_userArray_log.push(window.startingPointLongitude);
+				localStorage.setItem('start_users_lat', JSON.stringify(start_userArray_lat));
+				localStorage.setItem('start_users_log', JSON.stringify(start_userArray_log));
+
 				// var resultText = "Latitude: " + latitude + "<br>Longitude: " + longitude;
 				// $("#result").html(resultText);
-
 			});
 
 			var requestUrl_2 = apiUrl + "commonapi/search?searchVal=" + location_2 + "&returnGeom=Y&getAddrDetails=Y&pageNum=1";
@@ -289,6 +470,14 @@
 				// var resultText = "Latitude: " + latitude + "<br>Longitude: " + longitude;
 				// $("#result").html(resultText);
 
+				// 用webstore储存
+				let end_userArray_lat = JSON.pare(localStorage.getItem('end_users_lat')) || [];
+				let start_userArray_log = JSON.parse(localStorage.getItem('end_users_log')) || [];
+				end_userArray_lat.push(window.destinationLatitude);
+				end_userArray_log.push(window.destinationLongitude);
+				localStorage.setItem('end_users_lat', JSON.stringify(end_userArray_lat));
+				localStorage.setItem('end_users_log', JSON.stringify(end_userArray_log));
+
 				for (var i = 0; i < data.results.length; i++) {
 					end_longitudeArray.push(data.results[i].LONGITUDE);
 				}
@@ -300,12 +489,16 @@
 
 			});
 
+			// window.startingPointLatitude = parseFloat(startingPointCoords[0]);
+			// window.startingPointLongitude = parseFloat(startingPointCoords[1]);
+			// window.destinationLatitude = parseFloat(destinationCoords[0]);
+			// window.destinationLongitude = parseFloat(destinationCoords[1]);
+
 			console.log('Starting Point Latitude:', window.startingPointLatitude);
 			console.log('Starting Point Longitude:', window.startingPointLongitude);
 			console.log('Destination Latitude:', window.destinationLatitude);
 			console.log('Destination Longitude:', window.destinationLongitude);
-
-			Routing();
+			Routing(window.startingPointLatitude, window.startingPointLongitude, window.destinationLatitude, window.destinationLongitude);
 		}
 		// var startlat = '1.30000';
 		// var startlng = '103.84223';
@@ -314,13 +507,16 @@
 		// 1.30000,103.84223
 		// 1.31801,103.84224
 
+		function showHistory() {
+			// const 
+		}
 
-		function Routing() {
+		function Routing(startlat, startlng, endlat, endlng) {
 
-			var startlat = window.startingPointLatitude;
-			var startlng = window.startingPointLongitude;
-			var endlat = window.destinationLatitude;
-			var endlng = window.destinationLongitude;
+			// var startlat = window.startingPointLatitude;
+			// var startlng = window.startingPointLongitude;
+			// var endlat = window.destinationLatitude;
+			// var endlng = window.destinationLongitude;
 
 			console.log(startlat);
 			console.log(endlat);
@@ -410,32 +606,6 @@
 					console.log("currentPolyline已经弹出为空!")
 				}
 
-
-				// for (var i = 0; i < sampleRoute.route_instructions.length - 1; i++) {
-				// 	var instruction_1 = sampleRoute.route_instructions[i];
-				// 	var instruction_2 = sampleRoute.route_instructions[i + 1];
-				// 	var PointOfRoute_1 = instruction_1[3]; // 经纬度坐标点所在索引为3
-				// 	var PointOfRoute_2 = instruction_2[3];
-				// 	// console.log(PointOfRoute);
-				// 	// 需要转换为与decodeploy一样的格式
-				// 	var coordinatesArray_1 = PointOfRoute_1.split(',').map(parseFloat);
-				// 	var coordinatesArray_2 = PointOfRoute_2.split(',').map(parseFloat);
-				// 	var arrayOfArrays = [];
-				// 	arrayOfArrays.push(coordinatesArray_1);
-				// 	arrayOfArrays.push(coordinatesArray_2);
-				// 	console.log(arrayOfArrays);
-				// 	// 绘制当前分段的折线，并使用不同颜色
-				// 	var colorIndex = i % colors.length; // 根据索引选择颜色
-				// 	var polyline = L.polyline(arrayOfArrays, {
-				// 		color: colors[colorIndex],
-				// 		weight: 5,
-				// 		smoothFactor: 1
-				// 	});
-
-				// 	// 加入地图
-				// 	polyline.addTo(map);
-				// }
-
 				const camera_data = window.processData;
 				camera_latitudeArray = [];
 				camera_latitudeArray = [];
@@ -457,14 +627,6 @@
 					var arrayOfArrays = [];
 					arrayOfArrays.push(instruction_1);
 					arrayOfArrays.push(instruction_2);
-					// console.log(arrayOfArrays);
-					// 绘制当前分段的折线，并使用不同颜色
-					// var colorIndex = i % colors.length; // 根据索引选择颜色
-					// var polyline = L.polyline(arrayOfArrays, {
-					// 	color: colors[colorIndex],
-					// 	weight: 5,
-					// 	smoothFactor: 1
-					// });
 
 					// 转换点的经纬度
 					var TemptStartpointLat = instruction_1[0];
@@ -502,7 +664,7 @@
 
 					if (min_camera_end == -1 && min_camera_start == -1) {
 						var polyline = L.polyline(arrayOfArrays, {
-							color: "green",
+							color: "#00FF00",
 							weight: 5,
 							smoothFactor: 1
 						});
@@ -516,7 +678,7 @@
 					else if (min_camera_end > -1 && min_camera_start == -1) {
 						if (camera_car_number[min_camera_end] <= 4) {
 							var polyline = L.polyline(arrayOfArrays, {
-								color: "green",
+								color: "#00FF00))",
 								weight: 5,
 								smoothFactor: 1
 							});
@@ -528,7 +690,7 @@
 						}
 						else if (camera_car_number[min_camera_end] <= 9) {
 							var polyline = L.polyline(arrayOfArrays, {
-								color: "yellow",
+								color: "#FFFF00",
 								weight: 5,
 								smoothFactor: 1
 							});
@@ -540,7 +702,7 @@
 						}
 						else {
 							var polyline = L.polyline(arrayOfArrays, {
-								color: "red",
+								color: "#FF0033",
 								weight: 5,
 								smoothFactor: 1
 							});
@@ -553,7 +715,7 @@
 					else if (min_camera_end == -1 && min_camera_start > -1) {
 						if (camera_car_number[min_camera_start] <= 4) {
 							var polyline = L.polyline(arrayOfArrays, {
-								color: "green",
+								color: "#00FF00",
 								weight: 5,
 								smoothFactor: 1
 							});
@@ -564,7 +726,7 @@
 						}
 						else if (camera_car_number[min_camera_start] <= 9) {
 							var polyline = L.polyline(arrayOfArrays, {
-								color: "yellow",
+								color: "#FFFF00",
 								weight: 5,
 								smoothFactor: 1
 							});
@@ -575,7 +737,7 @@
 						}
 						else {
 							var polyline = L.polyline(arrayOfArrays, {
-								color: "red",
+								color: "FF0033",
 								weight: 5,
 								smoothFactor: 1
 							});
@@ -591,7 +753,7 @@
 						console.log(midnum);
 						if (midnum <= 4) {
 							var polyline = L.polyline(arrayOfArrays, {
-								color: "green",
+								color: "#00FF00",
 								weight: 5,
 								smoothFactor: 1
 							});
@@ -602,7 +764,7 @@
 						}
 						else if (midnum <= 9) {
 							var polyline = L.polyline(arrayOfArrays, {
-								color: "yellow",
+								color: "#FFFF00",
 								weight: 5,
 								smoothFactor: 1
 							});
@@ -613,7 +775,7 @@
 						}
 						else {
 							var polyline = L.polyline(arrayOfArrays, {
-								color: "red",
+								color: "#FF0033",
 								weight: 5,
 								smoothFactor: 1
 							});
@@ -637,18 +799,15 @@
 			}
 
 		}
-
 		function showData() {
 			const data = window.processData;
-
 			data.forEach((data) => {
 				const { latitude, longitude, car_num } = data;
 				var num = car_num * 2;
 				console.log("Latitude:", latitude);
 				console.log("Longitude:", longitude);
 				console.log("Car Number:", num);
-
-				let point = null;
+				let point;
 				// 显示标记点，并弹出窗口
 				if (num > 9) {
 					point = L.marker([latitude, longitude], { icon: RedIcon }).addTo(map);
